APIs/netboxdemo.com/2.8/java-client/docs/Circuit.md


# Circuit


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**cid** | **String** |  |  |
|**comments** | **String** |  |  [optional] |
|**commitRate** | **Integer** |  |  [optional] |
|**created** | **LocalDate** |  |  [optional] [readonly] |
|**customFields** | **Object** |  |  [optional] |
|**description** | **String** |  |  [optional] |
|**id** | **Integer** |  |  [optional] [readonly] |
|**installDate** | **LocalDate** |  |  [optional] |
|**lastUpdated** | **OffsetDateTime** |  |  [optional] [readonly] |
|**provider** | [**NestedProvider**](NestedProvider.md) |  |  |
|**status** | [**Status1**](Status1.md) |  |  [optional] |
|**tags** | **List&lt;String&gt;** |  |  [optional] |
|**tenant** | [**NestedTenant**](NestedTenant.md) |  |  [optional] |
|**terminationA** | [**CircuitCircuitTermination**](CircuitCircuitTermination.md) |  |  [optional] |
|**terminationZ** | [**CircuitCircuitTermination**](CircuitCircuitTermination.md) |  |  [optional] |
|**type** | [**NestedCircuitType**](NestedCircuitType.md) |  |  |



